[gd_scene format=3 uid="uid://b04vt18h530x3"]

[ext_resource type="Script" uid="uid://chmnom5ywngk8" path="res://scripts/main.gd" id="1_3rjh4"]
[ext_resource type="Theme" uid="uid://dethatjpkswlp" path="res://mainTheme.tres" id="2_m6yd5"]
[ext_resource type="PackedScene" uid="uid://dbcqiv2obxa3t" path="res://szenes/pronounciation_label.tscn" id="3_4b4it"]
[ext_resource type="Script" uid="uid://dtb1at4l6b428" path="res://scripts/settings_button.gd" id="3_acw1b"]
[ext_resource type="PackedScene" uid="uid://d2wj72kv2cgc1" path="res://szenes/Settings.tscn" id="3_drcd3"]

[node name="Main" type="Control" unique_id=776756791]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3rjh4")

[node name="Panel" type="Panel" parent="." unique_id=873860897]
z_index = -2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_m6yd5")
theme_type_variation = &"BackgroundPanel"

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=1708595916]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 23

[node name="SettingsButton" type="Button" parent="MarginContainer" unique_id=1490197595]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_type_variation = &"IconButton"
text = "⚙"
script = ExtResource("3_acw1b")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" unique_id=1111807055]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 0

[node name="LetterLabel" type="Label" parent="MarginContainer/VBoxContainer" unique_id=21209220]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 700)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_m6yd5")
theme_type_variation = &"LetterLabel"
text = "Таб"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer" unique_id=1574215151]
z_index = 1
layout_mode = 2
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer" unique_id=1085754939]
custom_minimum_size = Vector2(0, 900)
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="RevealButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer" unique_id=1387345886]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"IconButton"
text = "Reveal"

[node name="Answers" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer" unique_id=1769548524]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 0

[node name="PronounciationLabel" parent="MarginContainer/VBoxContainer/MarginContainer/Answers" unique_id=1516915026 instance=ExtResource("3_4b4it")]
layout_mode = 2

[node name="PronounciationLabel2" parent="MarginContainer/VBoxContainer/MarginContainer/Answers" unique_id=1279792452 instance=ExtResource("3_4b4it")]
layout_mode = 2

[node name="PronounciationLabel3" parent="MarginContainer/VBoxContainer/MarginContainer/Answers" unique_id=1669833971 instance=ExtResource("3_4b4it")]
layout_mode = 2

[node name="PronounciationLabel4" parent="MarginContainer/VBoxContainer/MarginContainer/Answers" unique_id=1069220089 instance=ExtResource("3_4b4it")]
layout_mode = 2

[node name="PronounciationLabel5" parent="MarginContainer/VBoxContainer/MarginContainer/Answers" unique_id=1458044876 instance=ExtResource("3_4b4it")]
layout_mode = 2

[node name="EvaluationButtons" type="HBoxContainer" parent="MarginContainer" unique_id=702166180]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="WrongButton" type="Button" parent="MarginContainer/EvaluationButtons" unique_id=341702421]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 200)
layout_mode = 2
theme_type_variation = &"IconButton"
text = "✗"

[node name="RightButton" type="Button" parent="MarginContainer/EvaluationButtons" unique_id=220800937]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 200)
layout_mode = 2
theme_type_variation = &"IconButton"
text = "✓"

[node name="LogoLabel" type="Label" parent="MarginContainer" unique_id=1000660181]
z_index = 17
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_type_variation = &"LogoLabel"
text = "Табеа"

[node name="Settings" parent="." unique_id=1123940602 instance=ExtResource("3_drcd3")]
unique_name_in_owner = true
visible = false
z_index = 2
layout_mode = 1

[connection signal="pressed" from="MarginContainer/SettingsButton" to="MarginContainer/SettingsButton" method="_on_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/RevealButton" to="." method="_on_reveal_button_pressed"]
[connection signal="pressed" from="MarginContainer/EvaluationButtons/WrongButton" to="." method="_on_wrong_button_pressed"]
[connection signal="pressed" from="MarginContainer/EvaluationButtons/RightButton" to="." method="_on_right_button_pressed"]
